nginx-ingress/ingress-service-gw.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2-gw-ingress
  namespace: apim
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - gw.am.wso2.com
#   secretName: "tls-secret"
  rules:
  - host: gw.am.wso2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wso2-am-service
            port:
              number: 8243
